# AetherStudio

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  TEST_WORKFLOW.md  赞助.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: branch-protection.yml  ci.yml  dev-feature-tracker.yml  dev-to-main-summary.yml  release-demo.yml  release-main.yml  restrict-main-pr.yml
.qoder/repowiki/zh/content/: 开发指南.md  快速开始.md  测试策略.md  项目概述.md
.qoder/repowiki/zh/content/API 参考/: API 参考.md  公共接口.md  命令行接口.md  配置接口.md
.qoder/repowiki/zh/content/UI 系统/: UI 系统.md  (+2 more)
.qoder/repowiki/zh/meta/: repowiki-metadata.json
.trae/documents/: Aether-AI-写代码能力增强计划.md  Aether-编译器前端基础设施审查与规划.md  MemoryStore-对话持久化与上下文工程设计.md
.trae/specs/optimize-ui-ux-design/: checklist.md  spec.md  tasks.md
crates/aether-ai/: Cargo.toml
crates/aether-ai/src/: lib.rs
crates/aether-cli/: Cargo.toml
crates/aether-cli/src/: main.rs
crates/aether-core/: Cargo.toml
crates/aether-core/benches/: lexer_bench.rs
crates/aether-core/src/: benchmarks.rs  char_width.rs  incremental_lexer.rs  lib.rs  persistent_history.rs  render_prep.rs  search.rs  simd_utils.rs
crates/aether-core/src/buffer/: history.rs  mod.rs  piece_table.rs  text_buffer.rs
crates/aether-core/src/lexer/: c_lexer.rs  common.rs  html_lexer.rs  js_lexer.rs  json_lexer.rs  markdown_lexer.rs  mod.rs  python_lexer.rs  rust_lexer.rs  toml_lexer.rs
crates/aether-core/src/workspace/: file_tree.rs
crates/aether-dap/: Cargo.toml
crates/aether-dap/src/: client.rs  lib.rs  session.rs  transport.rs  types.rs
crates/aether-lsp/: Cargo.toml
crates/aether-lsp/src/: client.rs  incremental_sync.rs  lib.rs  semantic_tokens.rs  server.rs  sync.rs  transport.rs  types.rs
crates/aether-plugin/src/: lib.rs  permissions.rs  registry.rs  runtime.rs
crates/aether-remote/: Cargo.toml
crates/aether-remote/src/: container.rs  git.rs  lib.rs  remote_fs.rs  ssh.rs  tests.rs  workspace.rs
crates/aether-render/src/: theme.rs  vscode_theme.rs
crates/aether-render/src/d2d/: brush_cache.rs  factory.rs  glass.rs  gpu_compute.rs  gpu_text.rs  mod.rs  text.rs
crates/aether-shared/: Cargo.toml
crates/aether-shared/src/: launch.rs  lib.rs  settings.rs
crates/aether-tree-sitter/: Cargo.toml
crates/aether-tree-sitter/src/: background.rs  highlighter.rs  language.rs  lib.rs  theme_mapping.rs
crates/aether-win32/: Cargo.toml  recent_projects.json
crates/aether-win32/resources/file_icons/: ICON_GUIDE.md
crates/aether-win32/resources/file_icons/preview/: index.html
crates/aether-win32/src/: activity_bar.rs  activity_bar_context_menu.rs  aether_db.rs  ai_agent.rs  ai_cold_data.rs  ai_context.rs  ai_history.rs  ai_hot_data.rs  ai_panel.rs  ai_prompt.rs  ai_warm_data.rs  auto_save.rs  bitmap_loader.rs  command_palette.rs  conpty.rs  context_menu.rs  cursor.rs  dialogs.rs  diff_view.rs  dirty_rect.rs  editor.rs  embedding.rs  events.rs  focus_manager.rs  git.rs  hit_test.rs  icons.rs  icons_svg.rs  icons_svg_defs.rs  ime.rs  inline_completion.rs  input.rs  keyboard_hook.rs  launch.rs  layout.rs  lib.rs  logging.rs  main.rs  memory_store.rs  menu_bar.rs  (+20 more)
crates/aether-win32/src/editor/: ai.rs  cursor.rs  dialogs.rs  editing.rs  events.rs  file_tree.rs  files.rs  find.rs  git.rs  ime.rs  lsp.rs  mod.rs  remote.rs  tabs.rs
crates/aether-win32/src/render/: account.rs  ai.rs  chrome.rs  dialogs.rs  editor_view.rs  find.rs  menus.rs  mod.rs  remote.rs  remote_dialogs.rs  settings_ai.rs  settings_general.rs  settings_models.rs  sidebar.rs  sidebar_files.rs  sidebar_scm.rs  tabs.rs  terminal.rs
crates/aether-win32/src/window/: app_icon.rs  ime_handler.rs  keyboard_handler.rs  mouse_handler.rs  window_messages.rs  window_setup.rs
crates/aether-win32/src/window/keyboard_handler/: char_input.rs  key_down.rs  key_down_ctrl.rs  key_down_edit.rs
crates/aether-win32/src/window/mouse_handler/: l_button_down.rs  m_button_down.rs  mouse_move.rs  r_button_down.rs
crates/aether-win32/src/window/mouse_handler/l_button_down/: content_area.rs  top_area.rs
crates/aether-win32/tests/: conpty_smoke.rs
deliverables/software-company/: aether-ux-architecture.md  aether-ux-prd.md  class-diagram.mermaid  sequence-diagram.mermaid
installer/: aether-setup.nsi
scripts/: build-release.ps1
tests/: TEST_REPORT.md  generate_coverage_report.ps1  gui_history_ux.py  gui_probe.py  gui_smoke.py  run_coverage.ps1  run_final_coverage.ps1  run_full_test.ps1
(+106 files in other folders)
