[package]
name = "aether-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
aether-core = { path = "../aether-core" }
lsp-types = "0.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["process", "io-util", "sync", "rt", "macros", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1.5"
tracing = "0.1"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
