[package]
name = "aether-tree-sitter"
version.workspace = true
edition.workspace = true

[dependencies]
tree-sitter = "0.20"
tree-sitter-highlight = "0.20"
aether-core = { path = "../aether-core" }

# 语言 grammar（统一到 tree-sitter 0.20 版本）
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-json = "0.20"
tree-sitter-toml = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"

# tree-sitter-html 0.20.4 错误地依赖 tree-sitter 0.22，需要锁定
# 改为内联高亮查询，不使用 tree-sitter-html crate
