[package]
name = "aether-win32"
version.workspace = true
edition.workspace = true

[[bin]]
name = "aether-app"
path = "src/main.rs"

[lib]
name = "aether_win32"
path = "src/lib.rs"

[dependencies]
aether-core = { path = "../aether-core" }
aether-render = { path = "../aether-render" }
aether-ai = { path = "../aether-ai" }
aether-shared = { path = "../aether-shared" }
aether-remote = { path = "../aether-remote" }
aether-lsp = { path = "../aether-lsp" }
aether-tree-sitter = { path = "../aether-tree-sitter" }
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "macros"] }
lsp-types = "0.95"
url = "2"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9", features = ["json"] }
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
similar = "2.6"
image = { version = "0.24", default-features = false, features = ["png"] }
memmap2 = "0.9"
flate2 = "1.0"
ort = { version = "2.0.0-rc.9", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-rustls"] }
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
ndarray = "0.17"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_System_LibraryLoader", "Win32_System_Com", "Win32_UI_Shell", "Win32_UI_Shell_Common", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_Graphics_Direct2D", "Win32_Graphics_DirectWrite", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_UI_HiDpi", "Win32_UI_Accessibility", "Win32_UI_Input_Ime", "Win32_System_Console", "Win32_System_Pipes", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_Memory", "Win32_System_IO"] }
